manifests/deployments/peerscout/spacy-keyword-extraction-api/spacy-keyword-extraction-api--stg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spacy-keyword-extraction-api--stg
  labels:
    app: spacy-keyword-extraction-api--stg
  namespace: peerscout
spec:
  selector:
    matchLabels:
      app: spacy-keyword-extraction-api--stg
  template:
    metadata:
      labels:
        app: spacy-keyword-extraction-api--stg
    spec:
      containers:
      - name: spacy-keyword-extraction-api
        image: ghcr.io/elifesciences/spacy-keyword-extraction-api_unstable:main-86bc3808-20250401.1046 # {"$imagepolicy": "peerscout:spacy-keyword-extraction-api-unstable"}
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          timeoutSeconds: 120
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          timeoutSeconds: 120
          periodSeconds: 60
        resources:
          requests:
            cpu: 100m
            memory: 2.6Gi
          limits:
            cpu: 500m
            memory: 3Gi
---
apiVersion: v1
kind: Service
metadata:
  name: spacy-keyword-extraction-api--stg
  namespace: peerscout
spec:
  selector:
    app: spacy-keyword-extraction-api--stg
  ports:
  - port: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spacy-keyword-extraction-api--stg
  namespace: peerscout
  labels:
    app: spacy-keyword-extraction-api--stg
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
    - host: spacy-keyword-extraction-api--stg.elifesciences.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: spacy-keyword-extraction-api--stg
                port:
                  number: 8000
  tls:
    - hosts:
        - spacy-keyword-extraction-api--stg.elifesciences.org
      secretName: spacy-keyword-extraction-api-stg-tls
